<resources>
    <string name="app_name">Messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="messenger_will_send_an_sms_message_to_verify_your_phone_number">Messenger will send an SMS message to verify your phone number</string>
    <string name="no_calls_yet">No Calls Yet</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="online">Online</string>
    <string name="no_call_yet">No call yet</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="privacy">Privacy</string>
    <string name="settings">Settings</string>
    <string name="everyone">EveryOne</string>
    <string name="nobody">Nobody</string>
    <string name="update_privacy">Update Privacy</string>
    <string name="edit_privacy">Edit Privacy</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="vishal">Vishal</string>
    <string name="biometric_failed">Fingerprint not recognized</string>
    <string name="todo">TODO</string>
    <string name="user_info">User Info</string>
    <string name="block_user">Block User</string>
    <string name="invite">Invite</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="oops_no_internet">OOPS! NO INTERNET</string>
    <string name="please_check_your_network_connection">Please check your network connection.</string>
    <string name="you_can_t_send_message_because_you_are_blocked_by">You can\'t send Message because you are blocked by</string>
    <string name="discover">Discover</string>
    <string name="notification">Notification</string>
</resources>