<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:background="#F1F1F1"
    android:orientation="vertical"
    android:elevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/_5sdp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/back_arrow"
            android:layout_gravity="center"
            app:tint="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:text="@string/edit_privacy"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp"
        android:layout_gravity="center"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_7sdp"
            >

            <LinearLayout
                android:id="@+id/lastSeen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_1sdp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Last Seen"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:textSize="@dimen/_16ssp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    >

                    <RadioGroup
                        android:id="@+id/lastSeenGroup"
                        android:layout_width="match_parent"
                        android:weightSum="1"
                        android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/lastSeenEveryone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/everyone" />

                <RadioButton
                    android:id="@+id/lastSeenNobody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nobody" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_7sdp"
            >

            <LinearLayout
                android:id="@+id/profilePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_1sdp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile Photo"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_3sdp"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:textSize="@dimen/_16ssp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    >

                    <RadioGroup
                        android:id="@+id/ProfilePhotoGroup"
                        android:layout_width="match_parent"
                        android:weightSum="1"
                        android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/profilePhotoEveryone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/everyone" />

                    <RadioButton
                        android:id="@+id/profilePhotoNobody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nobody" />

                    </RadioGroup>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_7sdp"
            >

            <LinearLayout
                android:id="@+id/aboutStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_1sdp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_3sdp"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:textSize="@dimen/_16ssp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    >

                    <RadioGroup
                        android:id="@+id/AboutGroup"
                        android:layout_width="match_parent"
                        android:weightSum="1"
                        android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/AboutEveryone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/everyone" />

                    <RadioButton
                        android:id="@+id/AboutNobody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nobody" />

                    </RadioGroup>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_7sdp"
            >

            <LinearLayout
                android:id="@+id/phoneBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_1sdp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textStyle="bold"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:textColor="@color/black"
                    android:padding="@dimen/_3sdp"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:textSize="@dimen/_16ssp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    >

                    <RadioGroup
                        android:id="@+id/PhoneGroup"
                        android:layout_width="match_parent"
                        android:weightSum="1"
                        android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/PhoneEveryone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/everyone" />

                    <RadioButton
                        android:id="@+id/PhoneNobody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nobody" />

                    </RadioGroup>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/update_privacy"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center" />

        </FrameLayout>



    </LinearLayout>
    </ScrollView>

</LinearLayout>