<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activities.imageViewer">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/black"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:foregroundGravity="center"
                android:src="@drawable/back_arrow"
                android:layout_marginStart="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toTopOf="@+id/userName" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="#fff"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/imgDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigation_bar"
        android:layout_below="@+id/bar_layout"
        android:transitionName="chatImage"

        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_bar"
        android:layout_alignParentBottom="true"
        android:background="#80000000">

        <LinearLayout
            android:id="@+id/download_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/imageView_download_imageShow"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/dwnlod" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="@dimen/_3sdp"
                android:ellipsize="end"
                android:text="Download"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_line_one_imageShow"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/set_as_wallpaper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/imageView_set_as_wallpaper_imageShow"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/wallpaper" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/set_wallpaper"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_line_two_imageShow"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/imageView_other_imageShow"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user_image" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="@dimen/_3sdp"
                android:ellipsize="end"
                android:text="Set Profile"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_line_three_imageShow"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />


        <ImageView
            android:id="@+id/imageView_line_four_imageShow"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/share_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/imageView_share_imageShow"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_shareside" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="Share"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>